# ScreenSaverReminder

./: .gitignore  CMakeLists.txt  README.md  ScreenSaverReminderCPP.sln  ScreenSaverReminderCPP.vcxproj  ScreenSaverReminderCPP.vcxproj.filters  build-msvc.bat  resource.rc
src/: main.cpp  resource.h
